# Brenbot

./: .gitignore  .project  Cargo.toml  README.md  bot.py  brenbotaws.pem  komi.txt  pom.xml  run.sh
bot/: bot.py  processors.py  text_processor.py  utils.py
important/: PuTTY Private Key.ppk  codes.txt  key.txt
resources/: kneejerks.txt
src/: main.rs
src/main/java/com/brenbrit/brenbot/: App.java  Bot.java
src/main/java/com/brenbrit/brenbot/entities/: FakeUser.java  Kneejerk.java
src/main/java/com/brenbrit/brenbot/listeners/: CommandListener.java  MessageListener.java  ReadyListener.java
src/main/java/com/brenbrit/brenbot/utils/: Downloader.java  EmbedFixer.java  FileReader.java  HelpGenerator.java  VersionGetter.java
src/main/resources/: fake_users.csv  kneejerks.csv  logback.xml
src/test/java/com/brenbrit/brenbot/: AppTest.java
